# EcoParse

./: .gitignore  Dockerfile  LICENSE  README.md  build_docker.sh  pyproject.toml  requirements.txt  run_docker.bat
app/: __init__.py  chunk_preview.py  cli.py  main.py  session.py  state_loader.py  ui_components.py  ui_helpers.py  ui_messages.py
app/assets/: default_project_config.yml  models_list.yml
app/tabs/: __init__.py  t1_upload_pdf_tab.py  t2_species_id_tab.py  t3_configure_extraction_tab.py  t4_run_extraction_tab.py  t5_results_tab.py  t6_manual_verification_tab.py  t7_reports_tab.py  t8_automated_verification_tab.py
documentation/: README.md  docker-guide.md  manual-installation.md
ecoparse/: __init__.py
ecoparse/core/: extractor.py  finders.py  models.py  prompter.py  reporter.py  sourcetext.py  verifier.py
logs/: ecoparse_report_20250807_163305.json  ecoparse_report_20250811_104815.json  ecoparse_report_20250811_105418.json  ecoparse_report_20250811_154549.json  ecoparse_report_20250813_120555.json  ecoparse_report_20250813_120822.json  ecoparse_report_20250813_120902.json  ecoparse_report_20250813_121317.json  ecoparse_report_20250813_121546.json  ecoparse_report_20250813_142526.json  ecoparse_report_20250813_143015.json  ecoparse_report_20250814_124957.json  ecoparse_report_20250814_135131.json  ecoparse_report_20250814_135643.json  ecoparse_report_20250814_135735.json  ecoparse_report_20250814_135832.json  ecoparse_report_20250814_140127.json  ecoparse_report_20250819_125718.json  ecoparse_report_20250819_144325.json  ecoparse_report_20250819_145045.json  ecoparse_report_20250819_151130.json  ecoparse_report_20250819_151629.json  ecoparse_report_20250822_140140.json  ecoparse_report_20250822_142159.json  ecoparse_report_20250822_142924.json  ecoparse_report_20250822_144144.json  ecoparse_report_20250822_151327.json  ecoparse_report_20250825_114812.json  ecoparse_report_20250825_122022.json  ecoparse_report_20250825_125140.json  ecoparse_report_20250825_130035.json  ecoparse_report_20250825_131345.json  ecoparse_report_20250825_132913.json  ecoparse_report_20250825_135154.json  ecoparse_report_20250825_140232.json  ecoparse_report_20250825_141212.json  ecoparse_report_20250825_141609.json  ecoparse_report_20250825_144637.json  ecoparse_report_20250825_144932.json  ecoparse_report_20250825_145608.json  (+59 more)
poster/: example_sp_filtering.ods
