[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoparse"
version = "1.0.0"
authors = [
  # Remember to fill this in with your name and email!
  { name="Adam Ulicny", email="adamulicny98@gmail.com" },
]
description = "A configurable tool for extracting species-level data from documents using LLMs."
readme = "README.md"
license = { text = "MIT" } # Explicitly state the license
keywords = ["ecology", "llm", "gemini", "ollama", "species", "data extraction", "streamlit"] 
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Streamlit",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "streamlit",
    "pandas",
    "PyMuPDF",
    "requests",
    "pydantic",
    "google-genai", 
    "ollama",
    "pygbif",
    "PyYAML",
    "plotly",
]

[project.urls]
"Homepage" = "https://github.com/AdamUlicny/EcoParse"
"Bug Tracker" = "https://github.com/AdamUlicny/EcoParse/issues"

# This section creates a command-line script for easy launching.
[project.scripts]
ecoparse = "app.cli:main"